<resources>
    <string name="APKTOOL_DUMMYVAL_0x7f110000">Account</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110001">Save widget</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110002">State</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110003">City</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110004">Address</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110005">Apt/ste (optional)</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110006">Get quick access to your recent or favorite chats.</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110007">SETTINGS</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110008">Use Meta Pay and check out faster.</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110009" formatted="false">Check out faster with your %s • %s.</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11000a">Enjoy shopping with Facebook</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11000b">Facebook Pay is now Meta Pay</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11000c">"You're still logged in to Facebook"</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11000d">Threads</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11000e">Close browser</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11000f">"%1$s wants to use your device's camera."</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110010">"%1$s wants to use your device's location."</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110011">Allow</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110012">Block</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110013">There are problems with the security certificate for this site</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110014">Go back</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110015">Security error</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110016">Navigate back</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110017">Photo tips</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110018">Take a photo</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110019">"Can't create a bug report right now. Sorry!"</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11001a">Security code</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11001b">Card Number</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11001c">Add billing address</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11001d">Billing address</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11001e">See less</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11001f">See more (%1$d)</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110020">Suggested from your shipping addresses</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110021">Suggested from your shipping address</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110022">Billing address same as shipping</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110023">Chats</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110024">Loading…</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110025">Allow camera access</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110026">"Don't allow camera access"</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110027">"Then you'll be able to scan your card. You can change this in your settings any time."</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110028">Allow Facebook to access your camera</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110029">Allow Instagram to access your camera</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11002a">Custom</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11002b">%1$dd</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11002c">Enter the 3- or 4-digit security code on your %1$s • %2$s to autofill this form.</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11002d">As an extra security check please enter details for your card ending with %1$s.</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11002e">As an extra security check, please enter the full card number for the card ending in %1$s.</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11002f">Add the Full Card Number for %1$s • %2$s.</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110030">Confirm Card Details</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110031">Confirm</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110032">Confirm the Security Code for %1$s • %2$s</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110033">OK</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110034">Direct</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110035">"Check your device's network connection and try again."</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110036">No network connection</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110037">Try again</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110038">Something went wrong.</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110039">open</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11003a">Email</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11003b">"The website you're viewing is attempting to open an external app. Would you like to continue?"</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11003c">Go back</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11003d">Continue</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11003e">"You're leaving our app"</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11003f">"This may be because of a technical error that we're working to get fixed. Try reloading this page."</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110040">Refresh</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110041">"Page isn't available right now"</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110042">Last name</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110043">"Page can't be loaded"</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110044">Open with …</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110045">Open in %1$s</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110046">More options</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110047">First name</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110048">Messages · %1$s</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110049">Messages</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11004a">%1$s</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11004b">%1$dh</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11004c">Enable access to your camera so that you can take a photo of your ID</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11004d">Link copied</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11004e">Report</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11004f">Report website</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110050">Share</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110051">Instagram</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110052">Instagram</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110053">Close the full photo preview</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110054">"We're having trouble setting up %2$s in %1$s right now. You can try again, or use %2$s in English (US) for now."</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110055">Just a moment while we set up %1$s…</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110056">Try again</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110057">Continue in English (US)</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110058">To see your chats here, open Instagram and log in first.</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110059">"You're not logged into Instagram"</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11005a">Learn more</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11005b">Checkout provided by Meta.</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11005c">"A link to a sheet explaining how this checkout works, and how Meta will use the user's information, with links to relevant privacy policies."</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11005d">Meta Pay</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11005e">privacy policy</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11005f">terms</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110060">By tapping %1$s you agree that Meta may use your cart and purchase info according to our [[terms_token]] and [[data_terms_token]], including for personalization and ads.</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110061">%1$dm</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110062">Name</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110063">Submit</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110064">When you message people on Instagram, your most recent chats will show up here.</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110065">"You don't have any chats yet"</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110066">Open Instagram</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110067">Close photo tips</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110068">"Don't hold the ID in your hand."</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110069">"Don't hold the card in your hand."</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11006a">Use bright but not overhead light.</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11006b">Align the corners of your ID within the frame.</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11006c">Align the corners of your card within the frame.</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11006d">Lay on a flat surface</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11006e">Avoid glare or shadows</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11006f">Center your ID</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110070">Center your card</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110071">Photo tips</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110072">Make sure you can read the text in the photo, otherwise your ID might not be accepted.</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110073">Next, we need the back of your ID.</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110074">Next, we need a photo of the back of your ID.</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110075">Make sure that you can clearly read the text in the photo, otherwise your ID might not be accepted.</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110076">The photo under review</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110077">Review your ID to ensure it contains your birthdate and a photo of your face, and that the information is clearly visible, otherwise your ID will not be accepted.</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110078">"We won't make your ID visible to others on Instagram. Once we finish our review, your information will be deleted within 30 days."</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110079">"We're not able to process your photo"</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11007a">ZIP code</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11007b">Posting…</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11007c">Recent</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11007d">Retake</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11007e">Retake photo</string>
    <string name="APKTOOL_DUMMYVAL_0x7f11007f">Review ID</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110080">Is the info readable?</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110081">Is this info readable?</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110082">Potential Security Risk</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110083">Hold your phone at eye level and make sure your whole face is visible.</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110084">Position your face inside the dotted circle</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110085">Position your face inside the dotted circle</string>
    <string name="APKTOOL_DUMMYVAL_0x7f110086">Back</string>
    <string name="APKTOOL_DUMMYVAL_0x7f1100aa">Cancel</string>
    <string name="APKTOOL_DUMMYVAL_0x7f1100ab">Dark</string>
    <string name="APKTOOL_DUMMYVAL_0x7f1100ac">Default</string>
    <string name="APKTOOL_DUMMYVAL_0x7f1100ad">Light</string>
    <string name="APKTOOL_DUMMYVAL_0x7f1100b2">Theme</string>
</resources>