<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/chat_type_selection_dialog" android:background="?elevatedBackgroundColor" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/abc_text_size_menu_header_material" android:textColor="@color/igds_secondary_text" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/APKTOOL_DUMMYVAL_0x7f110023" android:layout_marginVertical="10.0dip" />
    <include layout="@layout/appwidget_row_divider" />
    <TextView android:textSize="@dimen/account_group_management_row_text_size" android:textColor="@color/igds_primary_text" android:gravity="center" android:id="@id/recent_chat_setting" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/APKTOOL_DUMMYVAL_0x7f11007c" android:layout_marginVertical="15.0dip" />
    <include layout="@layout/appwidget_row_divider" />
    <TextView android:textSize="@dimen/account_group_management_row_text_size" android:textColor="@color/igds_primary_text" android:gravity="center" android:id="@id/custom_chat_setting" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/APKTOOL_DUMMYVAL_0x7f11002a" android:layout_marginVertical="15.0dip" />
    <include layout="@layout/appwidget_row_divider" />
    <TextView android:textSize="@dimen/account_group_management_row_text_size" android:textColor="@color/red_5" android:gravity="center" android:id="@id/exit_settings_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/APKTOOL_DUMMYVAL_0x7f1100aa" android:layout_marginVertical="15.0dip" />
</LinearLayout>