<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:background="?w3c_overlay_on_surface" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:id="@id/bottom_sheet_scroll_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:isScrollContainer="false" app:behavior_hideable="true" app:behavior_skipCollapsed="true" app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <FrameLayout android:id="@id/bottom_sheet_layout" android:background="@drawable/w3c_bottom_sheet" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ProgressBar android:layout_gravity="center" android:id="@id/progress_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?w3c_bottom_sheet_style_progress_bar" />
            <LinearLayout android:orientation="vertical" android:id="@id/enter_card_details_layout" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <include android:layout_width="fill_parent" android:layout_height="wrap_content" layout="?w3c_bottom_sheet_header_layout" />
                <TextView android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/APKTOOL_DUMMYVAL_0x7f110030" style="?w3c_bottom_sheet_title_text_style" />
                <TextView android:id="@id/description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/APKTOOL_DUMMYVAL_0x7f11002d" style="?w3c_bottom_sheet_description_text_style" />
                <com.fbpay.w3c.views.AutofillTextInputLayout android:id="@id/card_pan_input_layout" android:layout_width="fill_parent" android:layout_height="0.0dip" android:hint="@string/APKTOOL_DUMMYVAL_0x7f11001b" android:layout_weight="1.0" app:endIconMode="custom" style="?w3c_text_input_layout_style">
                    <EditText android:id="@id/card_pan_input" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="16" android:inputType="number" android:imeOptions="actionNext" android:importantForAutofill="no" style="?w3c_bottom_sheet_input_text_style" />
                </com.fbpay.w3c.views.AutofillTextInputLayout>
                <com.fbpay.w3c.views.AutofillTextInputLayout android:id="@id/card_cvv_input_layout" android:layout_width="fill_parent" android:layout_height="0.0dip" android:hint="@string/APKTOOL_DUMMYVAL_0x7f11001a" android:layout_weight="1.0" app:endIconMode="custom" style="?w3c_text_input_layout_style">
                    <EditText android:id="@id/card_cvv_input" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="4" android:inputType="numberPassword" android:imeOptions="actionDone" android:importantForAutofill="no" style="?w3c_bottom_sheet_input_text_style" />
                </com.fbpay.w3c.views.AutofillTextInputLayout>
                <TextView android:id="@id/inline_error_message" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" style="?w3c_bottom_sheet_error_style" />
                <Button android:enabled="false" android:id="@id/confrm_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="24.0dip" android:text="@string/APKTOOL_DUMMYVAL_0x7f110031" style="?w3c_bottom_sheet_style_confirm_button" />
            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>