<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/widget_settings_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" layout="@layout/generic_widget_header" />
    <include android:id="@id/instagram_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginBottom="12.0dip" android:layout_below="@id/widget_settings_header" android:layout_marginStart="@dimen/abc_select_dialog_padding_start_material" android:layout_marginVertical="12.0dip" layout="@layout/direct_app_widget_settings_header" />
    <View android:id="@id/divider_1" android:background="?dividerColor" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:layout_below="@id/instagram_header" android:layout_marginVertical="2.0dip" />
    <TextView android:textSize="@dimen/abc_text_size_menu_header_material" android:textColor="@color/igds_secondary_text" android:id="@id/settings_page_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginBottom="12.0dip" android:text="@string/APKTOOL_DUMMYVAL_0x7f110006" android:layout_below="@id/divider_1" android:layout_marginStart="@dimen/abc_select_dialog_padding_start_material" android:layout_marginVertical="12.0dip" />
    <TextView android:textSize="@dimen/abc_text_size_menu_header_material" android:textColor="@color/igds_secondary_text" android:id="@id/settings_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/APKTOOL_DUMMYVAL_0x7f110007" android:layout_below="@id/settings_page_description" android:layout_marginStart="@dimen/abc_select_dialog_padding_start_material" />
    <RelativeLayout android:orientation="horizontal" android:id="@id/account_setting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/abc_select_dialog_padding_start_material" android:layout_marginTop="@dimen/activation_module_horizontal_margin" android:layout_marginRight="@dimen/abc_select_dialog_padding_start_material" android:layout_marginBottom="@dimen/activation_module_horizontal_margin" android:layout_below="@id/settings_label" android:layout_marginHorizontal="@dimen/abc_select_dialog_padding_start_material" android:layout_marginVertical="@dimen/activation_module_horizontal_margin">
        <TextView android:textSize="@dimen/account_group_management_row_text_size" android:textColor="@color/igds_primary_text" android:id="@id/account_setting_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/APKTOOL_DUMMYVAL_0x7f110000" android:layout_alignParentLeft="true" />
        <TextView android:textSize="@dimen/account_group_management_row_text_size" android:textColor="@color/blue_5" android:id="@id/username" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <View android:id="@id/divider_account" android:background="?dividerColor" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_below="@id/account_setting" />
    <RelativeLayout android:orientation="horizontal" android:id="@id/theme_setting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/abc_select_dialog_padding_start_material" android:layout_marginTop="@dimen/activation_module_horizontal_margin" android:layout_marginRight="@dimen/abc_select_dialog_padding_start_material" android:layout_marginBottom="@dimen/activation_module_horizontal_margin" android:layout_below="@id/divider_account" android:layout_marginHorizontal="@dimen/abc_select_dialog_padding_start_material" android:layout_marginVertical="@dimen/activation_module_horizontal_margin">
        <TextView android:textSize="@dimen/account_group_management_row_text_size" android:textColor="@color/igds_primary_text" android:id="@id/theme_setting_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/APKTOOL_DUMMYVAL_0x7f1100b2" android:layout_alignParentLeft="true" />
        <TextView android:textSize="@dimen/account_group_management_row_text_size" android:textColor="@color/blue_5" android:id="@id/theme_type" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/APKTOOL_DUMMYVAL_0x7f1100ac" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <View android:id="@id/divider_theme" android:background="?dividerColor" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_below="@id/theme_setting" />
    <RelativeLayout android:orientation="horizontal" android:id="@id/chats_type_setting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/abc_select_dialog_padding_start_material" android:layout_marginTop="@dimen/activation_module_horizontal_margin" android:layout_marginRight="@dimen/abc_select_dialog_padding_start_material" android:layout_marginBottom="@dimen/activation_module_horizontal_margin" android:layout_below="@id/divider_theme" android:layout_marginHorizontal="@dimen/abc_select_dialog_padding_start_material" android:layout_marginVertical="@dimen/activation_module_horizontal_margin">
        <TextView android:textSize="@dimen/account_group_management_row_text_size" android:textColor="@color/igds_primary_text" android:id="@id/chats_type_setting_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/APKTOOL_DUMMYVAL_0x7f110023" android:layout_alignParentLeft="true" />
        <TextView android:textSize="@dimen/account_group_management_row_text_size" android:textColor="@color/blue_5" android:id="@id/chat_type" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/APKTOOL_DUMMYVAL_0x7f11007c" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <include android:id="@id/custom_chats_list" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/chats_type_setting" layout="@layout/direct_app_widget_custom_chat_settings" />
    <View android:id="@id/divider_2" android:background="?dividerColor" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:layout_above="@id/add_widget_button" android:layout_marginVertical="4.0dip" />
    <Button android:textSize="@dimen/account_section_text_line_height" android:textColor="@color/design_dark_default_color_on_background" android:id="@id/add_widget_button" android:background="@drawable/direct_widget_button_background" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/APKTOOL_DUMMYVAL_0x7f110001" android:layout_alignParentBottom="true" android:onClick="confirmConfiguration" android:textAlignment="center" android:layout_marginHorizontal="10.0dip" android:layout_marginVertical="5.0dip" />
</RelativeLayout>