<?xml version="1.0" encoding="utf-8"?>
<com.instagram.common.ui.base.IgLinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.instagram.common.ui.base.IgLinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/loading_strings_progress_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="48.0dip" android:layout_marginStart="@dimen/abc_floating_window_z" android:layout_marginEnd="@dimen/abc_floating_window_z">
        <com.instagram.common.ui.base.IgTextView android:gravity="center" android:id="@id/language_pack_loading_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="28.0dip" />
        <com.instagram.common.ui.base.IgProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </com.instagram.common.ui.base.IgLinearLayout>
    <com.instagram.common.ui.base.IgLinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/loading_strings_error_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="@dimen/abc_floating_window_z" android:layout_marginStart="@dimen/abc_floating_window_z" android:layout_marginEnd="@dimen/abc_floating_window_z">
        <com.instagram.common.ui.base.IgView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <com.instagram.common.ui.base.IgTextView android:textSize="26.0sp" android:textColor="@color/igds_primary_text" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/APKTOOL_DUMMYVAL_0x7f110038" />
        <com.instagram.common.ui.base.IgTextView android:textSize="14.0sp" android:textColor="@color/igds_secondary_text" android:gravity="center" android:id="@id/language_pack_loading_failed_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/abc_button_padding_horizontal_material" android:layout_marginBottom="24.0dip" android:lineSpacingExtra="4.0dip" />
        <com.instagram.common.ui.base.IgView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <com.instagram.common.ui.base.IgView android:background="?dividerColor" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginBottom="@dimen/abc_button_padding_horizontal_material" />
        <com.instagram.common.ui.base.IgTextView android:textSize="@dimen/abc_text_size_menu_header_material" android:textStyle="bold" android:textColor="@color/igds_icon_on_color" android:gravity="center" android:id="@id/use_english_button" android:background="@drawable/blue_button_background" android:layout_width="fill_parent" android:layout_height="@dimen/abc_action_bar_stacked_max_height" android:layout_marginTop="@dimen/abc_button_padding_horizontal_material" android:text="@string/APKTOOL_DUMMYVAL_0x7f110057" />
        <com.instagram.common.ui.base.IgTextView android:textSize="@dimen/abc_text_size_menu_header_material" android:textStyle="bold" android:textColor="@color/igds_primary_button" android:gravity="center" android:id="@id/retry_button" android:layout_width="fill_parent" android:layout_height="@dimen/abc_action_bar_stacked_max_height" android:layout_marginTop="@dimen/abc_button_padding_horizontal_material" android:text="@string/APKTOOL_DUMMYVAL_0x7f110056" />
    </com.instagram.common.ui.base.IgLinearLayout>
</com.instagram.common.ui.base.IgLinearLayout>